fix pre element overflow problem

--- a/less/main.less
+++ b/less/main.less
@@ -793,6 +793,7 @@ header {
                 border: 1px solid @text-lightest;
                 max-height: 30em;
                 margin: 0 0 15px 0;
+                overflow: auto;
                 code {
                     .calculatedSize(16;1.5);
                 }
